--- a/backend/package.json
+++ b/backend/package.json
@@ -2,18 +2,19 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "src/server.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
