prepared for production

--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "notes": "file:.."
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
